--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.916670046571-dvjloeok12ehcpi3i9jrt19kl477gv7g</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAkYDADQXzZFbebyS_lVyrl8J5c5sHJ1KI</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>916670046571</string>
 	<key>PLIST_VERSION</key>
